# marvolo

./: README.md  compute_stats.ipynb  make_anagram.ipynb  marvolo.py  pyproject.toml
stats/: names-female.json  names-male.json  surnames-female.json  surnames-male.json
